# dubizzle-car-AI-Assistant

./: .gitignore  README.md  pyproject.toml
backend/: config.py  db.py  inventory.py  lead_scoring.py  llm_agent.py  llm_client.py  main.py  memory.py  tools.py
data/: app.db  cars_dataset.xlsx  leads.csv
frontend/: app.py
