[project]
name = "dubizzle-car-assistant"
version = "1.0.0"
description = "AI assistant prototype for exploring the dubizzle Cars inventory, booking viewings, and qualifying leads."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.50.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
]

[tool.uv]
package = false
